--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,8 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/bi": "^1.1.8",
+    "@iconify-json/mdi": "^1.1.33",
     "@nuxt/content": "^2.1.1",
     "@nuxtjs/tailwindcss": "^5.3.3",
-    "nuxt": "3.0.0-rc.11"
+    "nuxt": "3.0.0-rc.11",
+    "unplugin-icons": "^0.14.10"
   }
 }
