--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,5 +14,8 @@
     "@nuxtjs/tailwindcss": "^5.3.3",
     "nuxt": "3.0.0-rc.11",
     "unplugin-icons": "^0.14.10"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
