--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@iconify-json/bi": "^1.1.8",
     "@iconify-json/mdi": "^1.1.33",
+    "@iconify-json/teenyicons": "^1.1.3",
     "@nuxt/content": "^2.1.1",
     "@nuxtjs/tailwindcss": "^5.3.3",
     "nuxt": "3.0.0-rc.11",
